--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@ dist
 dist-ssr
 *.local
 
-# Environment variables
-#.env
-#.env.local
-#.env.*.local
+#Environment variables
+.env
+.env.local
+.env.*.local
 
 # Editor directories and files
 .vscode/*
