--- a/.github/workflows/check-migrations.yml
+++ b/.github/workflows/check-migrations.yml
@@ -1,19 +1,24 @@
-# .github/workflows/check-migrations.yml
 name: Check Supabase migrations (PR)
 
 on:
   pull_request:
     branches: [ main ]
+    # (optional) only run when the Supabase folder changed
+    # paths: [ 'supabase/**' ]
 
 jobs:
   check:
+    # hard guard: never run unless the PR base is main
+    if: github.event.pull_request.base.ref == 'main'
     runs-on: ubuntu-latest
     env:
-      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
-      PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }}
+      SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}   # prod PAT
+      PROJECT_REF: ${{ secrets.SUPABASE_PROJECT_REF }}               # prod project ref
     steps:
       - uses: actions/checkout@v4
       - uses: supabase/setup-cli@v1
         with: { version: latest }
       - run: supabase link --project-ref "$PROJECT_REF"
       - run: supabase db push --dry-run
+        # add --debug while diagnosing:
+        # run: supabase db push --dry-run --debug
